--- a/src/assets/sass/_config.scss
+++ b/src/assets/sass/_config.scss
@@ -3,8 +3,13 @@ $color-primary: #fff !default;
 $color-secondary: #fff !default;
 
 /* Fonts */
-$font-family-main: Arial, sans-serif !default;
+$font-family-main: 'Helvetica', 'Open Sans', Arial, sans-serif !default;
 $font-family-title: Arial, sans-serif !default;
+
+$font-regular: 400!default;
+$font-semi-bold: 600!default;
+$font-bold: 700!default;
 
 $font-size-base: 1rem !default;
 $font-size-small: .75rem !default;
+$font-size-menu: 1.5rem !default;
