--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -1,39 +1,76 @@
-header#header {
-  padding: 20px 50px;
+header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  width: 250px;
+  background: #000;
+  z-index: 10;
   .logo {
-    height: 110px;
+    padding: 10px 15px;
     img {
-      height: 100%;
+      width: 100%;
     }
   }
   .menu {
-    position: relative;
-    top: 5px;
+    position: static;
+    top: 0;
+    font-family: $font-family-title;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: right;
     ul {
-      display: flex;
-
       li {
-        display: inline-block;
+        display: block;
         a {
-          display: inline-block;
+          display: block;
           padding: 10px 20px;
-          margin: 0 30px;
           text-transform: uppercase;
           text-decoration: none;
           color: #fff;
           font-size: $font-size-menu;
-          font-weight: $font-regular;
+          font-weight: $font-bold;
         }
-        &:last-of-type a {
-          margin-right: 0;
-        }
-        &:first-of-type a {
-          margin-left: 0;
+        &.selected,
+        &:hover {
+          a {
+            color: #E72E4E;
+          }
         }
       }
+    }
+  }
+  .hamburger {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  header {
+    width: 100%;
+    .responsiveHeader {
+      width: 100%;
+      height: 50px;
+      display: flex;
+      justify-content: space-between;
+    }
+    .logo {
+      padding: 5px 10px;
+      img {
+        height: 40px;
+        width: auto;
+      }
+    }
+    .hamburger {
+      display: inline-block;
+    }
+    .menu {
+      display: none;
+      position: absolute;
+      width: 100%;
+      top: 50px;
+      background: #000;
+      text-align: center;
     }
   }
 }
