--- a/src/assets/sass/_mainPage.scss
+++ b/src/assets/sass/_mainPage.scss
@@ -1,19 +1,17 @@
 .mainPage {
-  width: 100%;
-  height: 100%;
-  background: {
-    image: url(../img/background.jpeg);
-    repeat: no-repeat;
-    size: cover;
-    attachment: fixed;
+  background-image: url(../img/background.jpeg);
+  animation: fadeIn 150ms ease-in;
+  video {
+    display: none;
+    animation: fadeIn 1000ms ease-in;
+    object-fit: cover;
+    object-position: center;
   }
-  .blackFilter {
-    background-color: transparentize(#000, 0.25);
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
+}
+
+.content.is-exiting {
+  .mainPage {
+    animation: fadeOut 150ms ease-in;
+    animation-fill-mode: forwards;
   }
 }
