--- a/src/assets/sass/_works.scss
+++ b/src/assets/sass/_works.scss
@@ -1,10 +1,11 @@
 .works {
-  width: 100%;
-  height: 100%;
-  background: {
-    image: url(../img/background_works.jpeg);
-    repeat: no-repeat;
-    size: cover;
-    attachment: fixed;
+  background-image: url(../img/background_works.jpeg);
+  animation: fadeIn 150ms ease-in;
+}
+
+.content.is-exiting {
+  .works {
+    animation: fadeOut 150ms ease-in;
+    animation-fill-mode: forwards;
   }
 }
