SmoothState.js modification

--- a/src/assets/sass/_config.scss
+++ b/src/assets/sass/_config.scss
@@ -12,7 +12,8 @@ $font-bold: 700!default;
 
 $font-size-base: 1rem !default;
 $font-size-small: .75rem !default;
-$font-size-menu: 1.5rem !default;
+$font-size-menu: 2.0625em !default;
+$font-size-main: 2.0625em !default;
 
 $hamburger-types: (squeeze);
 $hamburger-layer-color: #fff;
