--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -1,13 +1,15 @@
 header {
   display: flex;
   flex-direction: column;
-  width: 250px;
+  width: 280px;
   background: #000;
   z-index: 10;
+  padding: 50px 20px 0;
   .logo {
-    padding: 10px 15px;
+    text-align: center;
     img {
       width: 100%;
+      max-width: 230px;
     }
   }
   .menu {
@@ -24,7 +26,7 @@ header {
         display: block;
         a {
           display: block;
-          padding: 10px 20px;
+          padding: 5px 0px;
           text-transform: uppercase;
           text-decoration: none;
           color: #fff;
@@ -48,6 +50,8 @@ header {
 @media only screen and (max-width: 850px) {
   header {
     width: 100%;
+    padding: 0;
+    z-index: 25;
     .responsiveHeader {
       width: 100%;
       height: 50px;
