--- a/src/assets/sass/_mainPage.scss
+++ b/src/assets/sass/_mainPage.scss
@@ -7,6 +7,27 @@
     object-fit: cover;
     object-position: center;
   }
+  .blackLayer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: transparentize(#000, 0.6);
+    z-index: 20;
+    p {
+      width: 90%;
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #fff;
+      font-size: $font-size-main;
+      line-height: 1.4;
+      b {
+        font-weight: $font-bold;
+      }
+    }
+  }
 }
 
 .content.is-exiting {
