--- a/src/assets/sass/_works.scss
+++ b/src/assets/sass/_works.scss
@@ -45,17 +45,27 @@
   }
 }
 
-.content.is-exiting {
-  .works {
+.content {
+  &.exiting-extend-1 {
     .itemWork {
-      a:hover {
-        background: transparent;
-        span {
-          display: none;
-        }
-      }
       &:nth-child(2), &:nth-child(3) {
-        animation: flex 300ms linear;
+        animation: flex 500ms ease-in;
+        animation-fill-mode: forwards;
+      }
+    }
+  }
+  &.exiting-extend-2 {
+    .itemWork {
+      &:nth-child(1), &:nth-child(3) {
+        animation: flex 500ms ease-in;
+        animation-fill-mode: forwards;
+      }
+    }
+  }
+  &.exiting-extend-3 {
+    .itemWork {
+      &:nth-child(1), &:nth-child(2) {
+        animation: flex 500ms ease-in;
         animation-fill-mode: forwards;
       }
     }
