--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -6,9 +6,13 @@
 
 @import '_animate';
 @import '_default';
+@import '_player';
 @import '_header';
 @import '_main';
 
 @import '_mainPage';
 @import '_works';
 @import '_sampleWork';
+@import '_instruments';
+@import '_about';
+@import '_contact';
