--- a/src/assets/sass/_contact.scss
+++ b/src/assets/sass/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+  overflow: auto;
   background-image: url(../img/background_contact.jpg);
   display: flex;
   .infos,
@@ -39,6 +40,9 @@
           size: 100%;
         }
       }
+      &:last-of-type {
+          margin-bottom: 0px;
+      }
       a {
         color: #000;
         &:hover {
@@ -50,10 +54,12 @@
   .form {
     flex: 1.5;
     box-sizing: border-box;
+    padding-left: 0px;
     form {
       div {
         display: flex;
-        input, textarea {
+        input,
+        textarea {
           margin-bottom: 30px;
           font-family: $font-family-main;
           font-size: 1rem;
@@ -62,14 +68,44 @@
           padding: 15px;
           background: transparentize(#fff, 0.2);
           border: none;
+          &.error {
+            border: #ff0000 solid 1px;
+          }
         }
         input#prenom {
           margin-right: 30px;
         }
         textarea {
-          resize: none;
+          resize: vertical;
+        }
+        &:last-of-type {
+          justify-content: center;
         }
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .contact {
+    flex-direction: column;
+    .form {
+      padding-top: 0px;
+      padding-left: 50px;
+    }
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .contact {
+    .infos {
+      padding: 20px;
+      .infoBlock {
+        padding: 25px;
+      }
+    }
+    .form {
+      padding: 20px;
     }
   }
 }
